--- a/package.json
+++ b/package.json
@@ -74,12 +74,13 @@
     "react-hotkeys-hook": "^4.5.0",
     "react-icons": "^5.0.0",
     "react-intersection-observer": "^9.13.0",
+    "react-is": "^19.1.1",
     "react-redux": "^9.0.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-use": "^17.5.0",
     "react-virtuoso": "^4.10.0",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
